# Graphite

./: CMakeLists.txt  imgui.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: light.frag.glsl  light.vert.glsl  lit.frag.glsl  lit.vert.glsl
src/: Camera.cpp  Camera.hpp  ExampleLayer.cpp  ExampleLayer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Layer.cpp  Layer.hpp  Light.hpp  Main.cpp  Material.hpp  Shader.cpp  Shader.hpp  UILayer.cpp  UILayer.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
